fix: remove background color on html element to fix contrast bug on members page in lighthouse test

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,6 @@
 
 html {
   scroll-behavior: smooth;
-  background-color: #927397;
 }
 
 h1,
